examples/test/testpolicy4297.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4297
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key15: value2
      key39: value5
      key20: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value31
          key28: value39
          key9: value19
      podSelector:
        matchLabels:
          key47: value36
          key11: value0
          key30: value12
